# disclaimer

./: .gitignore  DEPLOYMENT.md  README.md  RENDER_FIX.md  app.py  pyproject.toml  render.yaml  requirements.txt
backend/src/full_marketing_materials_reviewer/: crew.py  main.py
backend/src/full_marketing_materials_reviewer/config/: agents.yaml  tasks.yaml
